if ENABLE_TESTS

bin_SCRIPTS = lxc-test-automount \
	      lxc-test-autostart \
	      lxc-test-cloneconfig \
	      lxc-test-createconfig \
	      lxc-test-no-new-privs \
	      lxc-test-rootfs

if DISTRO_UBUNTU
bin_SCRIPTS += \
	lxc-test-lxc-attach \
	lxc-test-apparmor-mount \
	lxc-test-checkpoint-restore \
	lxc-test-snapdeps \
	lxc-test-symlink \
	lxc-test-ubuntu \
	lxc-test-unpriv \
	lxc-test-usernic
endif

endif
